# ChangeLog for dev-python/terra
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*terra-9999 (20 Jul 2009)

  20 Jul 2009; evadim <evadim@evadim.ru> +terra-9999.ebuild, +metadata.xml:
  initial import
