@@ -1,3 +1,3 @@
-EBUILD canola-9999.ebuild 2020 RMD160 27937e47b8fde8d746c8305cac3f7fb36f68f40f SHA1 da347d14f5c5c47635b64cd6bb3081c4f6f789ae SHA256 8934c0619c812f74ee25e209e6d35f58cc9afdf8ba0bf8ebe557630e317a2e5f
-MISC ChangeLog 536 RMD160 6c2dbed53f57040ba336293b76d1c817cca24f6a SHA1 9ad334b14ae5c4f6f22ebfc06118a0481c0d3fee SHA256 87a6b1b6316d31796c242563896e1af6bb4a99490ae89906b1f215a0cf1e0691
+EBUILD canola-9999.ebuild 2048 RMD160 84eeafed399540888186c2fec34d544b296030a3 SHA1 f3d6b83e2ba3b73ff94cbcfbdd2a03f914f35fa1 SHA256 fd34383cd16e9f8b67f1a0b7a43b00be639bd3dd21deaaeb4a13daca5ced705e
+MISC ChangeLog 699 RMD160 26db7d0e84e356c0f606f7b4972f81dd3ab4cc42 SHA1 11799f641cbe33d3689e3627b022e295946b1533 SHA256 c52ae32776dca72ebab7c4420f390cfeee6679e15807010a5121edc277f9793e
 MISC metadata.xml 228 RMD160 1890a2965ed780e661e20adcfc4f4cce5f7ca8e9 SHA1 777d2a3ad7f7075c7e75fa5055f3941440e4e875 SHA256 42ea435327140212f3beb05aafebad5053cbad84532f9bb78987de8540c6459a
