@@ -1,0 +1,10 @@
+# ChangeLog for dev-python/python-dispatcher
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*python-dispatcher-9999 (17 Sep 2009)
+
+  17 Sep 2009; evadim <evadim@evadim.ru> +python-dispatcher-9999.ebuild,
+  +metadata.xml:
+  initial commit
+
