@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Sep 2009; evadim <evadim@evadim.ru> terra-9999.ebuild:
+  terra depend on other dispatcher
+
 *terra-9999 (20 Jul 2009)
 
   20 Jul 2009; evadim <evadim@evadim.ru> +terra-9999.ebuild, +metadata.xml:
